fixed update function
